<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_selector"
        android:checkable="true"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_selector"
        android:checkable="true"
        android:title="Search" />

    <item
        android:id="@+id/navigation_collection"
        android:icon="@drawable/ic_collection_selector"
        android:checkable="true"
        android:title="@string/title_collection" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_selection"
        android:checkable="true"
        android:title="@string/title_profile" />

</menu>
