<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSurface"
        tools:context=".ui.auth.LoginActivity">

        <ImageView
            android:id="@+id/hero_illustration"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.55" />

        <LinearLayout
            android:id="@+id/form_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingHorizontal="32dp"
            android:paddingTop="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_horizontal">

            <TextView
                android:id="@+id/welcome_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textFontWeight="600"
                android:text="@string/welcome_back"
                android:textAppearance="?attr/textAppearanceDisplaySmall"
                android:textColor="?attr/colorPrimary" />

            <TextView
                android:id="@+id/instruction_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="64dp"
                android:textFontWeight="300"
                android:gravity="center"
                android:text="@string/sign_in_instruction_google"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                android:textColor="?attr/colorOnSurfaceVariant" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/google_sign_in_material_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="12dp"
                android:textFontWeight="300"
                android:text="@string/sign_in_with_google"
                android:textAppearance="?attr/textAppearanceLabelLarge"
                app:icon="@drawable/google_logo"
                app:iconGravity="textStart"
                app:iconPadding="16dp"
                app:iconTint="?attr/colorOnPrimary" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>